# Advanced_ROOT_Plotting

./: .gitignore  AdvancedPlotGUI  AdvancedPlotGUI.cpp  AdvancedPlotGUI.h  CMakeLists.txt  ColumnSelector.cpp  ColumnSelector.h  ColumnSelectorDict_rdict.pcm  DataReader.h  Doxyfile  Makefile  PlotTypes.h  ProjectDict_rdict.pcm  README.md  UserManual.md  Version 2.3 Release Notes  check_dict.sh  histograms.root  main.cpp  test_events.root
docs/: DeveloperGuide.md  QuickReference.md  UserManual.md
include/: #####DropTextEntry.h  AdvancedPlotGUI.h  CSVPreviewDialog.h  ColumnSelector.h  ColumnSelectorDialog.h  ColumnSelectorLinkDef.h  DataReader.h  ErrorHandling.h  FileHandler.h  FitUtils.h  LinkDef.h  PlotTypes.h  ROOTBranchSelectorDialog.h  ROOTFileBrowser.h  RootEntrySelector.h  ScriptEngine.h
src/: ###3AdvancedPlotGUI.cpp  AdvancedPlotGUI.cpp  CSVPreviewDialog.cpp  ColumnSelector.cpp  ColumnSelectorDict.cpp  ColumnSelectorDict_rdict.pcm  FileHandler.cpp  PlotManager.cpp  ProjectDict.cpp  ROOTBranchSelectorDialog.cpp  ROOTFileBrowser.cpp  RootEntrySelector.cpp
